<?xml version="1.0"?>
<package>
  <name>turtlebot3_diff_driver</name>
  <version>0.0.1</version>
  <description>The turtlebot3_diff_driver package</description>
  <maintainer email="pyo@robotis.com">Yoonseok Pyo</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/dynamixel_manager</url>
  <author email="pyo@robotis.com">Yoonseok Pyo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlebot3_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export></export>
</package>
