<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_example</name>
  <version>2.1.4</version>
  <description>
    This package provides four basic examples for TurtleBot3 (i.e., interactive marker, object detection, patrol and position control).
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>