<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_example</name>
  <version>2.3.3</version>
  <description>
    This package provides four basic examples for TurtleBot3 (i.e., interactive marker, object detection, patrol and position control).
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <author email="ljg@robotis.com">Jeonggeun Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="willson@robotis.com">Will Son</author>
  <author email="junyeong4321@gmail.com">Junyeong Jeong</author>
  <author email="nys8277@gmail.com">YeonSoo Noh</author>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
