<?xml version="1.0"?>
<package>
  <name>turtlebot3_gazebo</name>
  <version>0.1.2</version>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <license>Apache License 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="website">http://wiki.ros.org/turtlebot3_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
