################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(turtlebot3_lds)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  rospy
  sensor_msgs
  geometry_msgs
)

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  #INCLUDE_DIRS include
  CATKIN_DEPENDS rospy sensor_msgs geometry_msgs
)

################################################################################
# Build
################################################################################
include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)
################################################################################
# Install
################################################################################
catkin_install_python(PROGRAMS scripts/lds.py
 		      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
