<?xml version="1.0"?>
<package>
  <name>turtlebot3_lds</name>
  <version>0.0.0</version>
  <description>
	Package for turtlebot3 automatic_parking. You need a reflective tape and real robots.
        You can see parking spot using this pacakge on rviz.
  </description>
  <license>Apache License 2.0</license>
  <author email="kkjong89@naver.com">Gilbert</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_applications/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
